--- a/trunk/css/example.css
+++ b/trunk/css/example.css
@@ -107,3 +107,14 @@ ul.tabbernav li.tabberactive a:hover
  height:200px;
  overflow:auto;
 }
+
+
+/*--------------------------------------------------
+  Additional stylesheet elements
+  --------------------------------------------------*/
+
+ul.volunteerList {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
