Fixed "go" button on villages tab, fixed refresh of village itinerary to only happen on button click

--- a/css/example.css
+++ b/css/example.css
@@ -118,3 +118,10 @@ ul.volunteerList {
 	margin: 0;
 	padding: 0;
 }
+
+.dateButton {
+	margin-top: -2;
+	height: 18;
+	font-family: Tahoma, Arial;
+	font-size: 11;
+}
