--- a/trunk/css/style.css
+++ b/trunk/css/style.css
@@ -1,8 +1,6 @@
 #header
 {
-	position: relative;
-	width: 100%;
-	height: 10%;
+	height: 100px;
 	border: none;
 	padding: 0;
 }
@@ -23,20 +21,25 @@
 
 #thoughtworks
 {
-	position: relative;
+	position: absolute;
+	top: 100px;
+	left: 0px;
 	visibility: hidden;
 	width: 25%;
-	height: 90%; 
+	height: 85%;
 	border: none;
 	padding: 0;
 }
 
 #calendar
 {
-	position: relative;
+	position: absolute;
+	top: 100px;
+	right: 0px;
 	visibility: hidden;
-	width: 74%;
-	height: 89%;
+	width: 75%;
+	height: 85%;
+	padding: 0;
 }
 
 FORM {
